# diploma_research

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  benchmarks.json  c.yaml  conanfile.py
.devcontainer/: devcontainer.json
.github/actions/artifactory_upload/: action.yml
.github/workflows/: build-paper.yml  docker-build-debian-10.yml  docker-build-ubuntu-20.04.yml  docker.yml  linux.yml
apps/: CMakeLists.txt
apps/conjugate_gradient/: CMakeLists.txt  cache_aligned_allocator.h  csr5_cuda.cu  main.cpp  matrix_storage_formats.h  spmv_algos.hpp  timed_section.h
apps/cpuid_research/: CMakeLists.txt  main.cpp
apps/csr5_bench/: CMakeLists.txt  csr5_cuda.cu  main.cpp  spmv_algos.hpp
apps/dim_cli/: CMakeLists.txt  arguments.h  main.cpp  subcommands.h
apps/dim_cli/subcommands/: compare_results.cpp  compare_results.h  csr5_info.cpp  csr5_info.h  download.cpp  download.h  generate_heatmap.cpp  generate_heatmap.h  store_matrix.cpp  store_matrix.h
apps/dist_spmv/: CMakeLists.txt  main.cpp
apps/hdf5_converter/: CMakeLists.txt  main.cpp
apps/matrix_converter/: CMakeLists.txt  arguments.cpp  arguments.h  main.cpp
apps/parallel_hdf5/: CMakeLists.txt  main.cpp
apps/petsc_baseline/: CMakeLists.txt  arguments.cpp  arguments.h  main.cpp  petsc_error.h
benchmarks/: CMakeLists.txt
benchmarks/conjugate_gradient/: CMakeLists.txt
benchmarks/conjugate_gradient/dim/: CMakeLists.txt  main.cpp
benchmarks/conjugate_gradient/dim_sp/: CMakeLists.txt  main.cpp
benchmarks/conjugate_gradient/mkl/: CMakeLists.txt  main.cpp
benchmarks/conjugate_gradient/petsc/: CMakeLists.txt  arguments.h  main.cpp  petsc_guard.h
benchmarks/csr5/: CMakeLists.txt
benchmarks/csr5/dim/: CMakeLists.txt  arguments.h  main.cpp
benchmarks/csr5/original/: CMakeLists.txt  main.cpp
benchmarks/csr5_orig_benchmark/: CMakeLists.txt  main.cpp
benchmarks/csr5_single_node/: CMakeLists.txt  arguments.h  cuda_algo_facade.h  main.cpp  spmv_algos.hpp
benchmarks/gradient_descent_mkl/: CMakeLists.txt
benchmarks/gradient_descent_mpi/: CMakeLists.txt
benchmarks/gradient_descent_petsc/: CMakeLists.txt  arguments.cpp  main.cpp
benchmarks/io/: CMakeLists.txt
benchmarks/io/csr5/mp/: CMakeLists.txt  main.cpp
benchmarks/io/csr5/sp/: CMakeLists.txt  main.cpp
benchmarks/io/matlab_compatible_hdf5/: CMakeLists.txt
benchmarks/io/mmef/: CMakeLists.txt  main.cpp
benchmarks/io/mp/: CMakeLists.txt
benchmarks/io/sp/: CMakeLists.txt
benchmarks/matlab_compatible_hdf5/: CMakeLists.txt  main.cpp
benchmarks/microbenchmarks/: CMakeLists.txt  csr5.cpp  io.cpp
benchmarks/mmef/: CMakeLists.txt  main.cpp
benchmarks/mpi_csr5/: CMakeLists.txt  main.cpp
benchmarks/steepest_descent/: CMakeLists.txt  main.cpp
benchmarks/steepest_descent_mpi/: CMakeLists.txt  main.cpp
cmake/: conan.cmake  conan_integration.cmake  coverage.cmake  default_settings.cmake  functions.cmake  options.cmake  runtime.cmake  versioning.cmake  warnings.cmake
cmake/toolchains/: debian-10-llvm-12-libcpp.cmake  debian-10-llvm-13-libcpp.cmake
cmake/version_supp/: versioninfo.rc.in
dockerfiles/build_images/debian-10/: Dockerfile  additional_sources.list
dockerfiles/build_images/ubuntu-20.04/: Dockerfile  ranges.patch
dockerfiles/build_images/ubuntu-20.04-cuda/: Dockerfile
dockerfiles/development_images/debian-10/: Dockerfile
docs/paper/: .latexmkrc  FITthesis.cls  ref.bib  thesis.tex
docs/research/: description.md  zen2_timings.md
docs/slideshow/: beamerthemeCVUTFIT.sty  slideshow.tex
include/cuda_interop/: annotations.h  error.h  memory.h
include/dim/: bit.h  keyval_iterator.h  opt.h  resource.h  simd.h  simple_main.h  span.h  vec.h
include/dim/bench/: stopwatch.h  timed_section.h
include/dim/csr5_mpi/: csr5_mpi.h  edge_sync.h  output_range.h  result_sync.h
include/dim/io/: file.h  format.h  h5.h  matrix_market.h  mmapped.h
include/dim/io/h5/: attribute.h  dataset.h  dataspace.h  err.h  file.h  fwd.h  group.h  location.h  object.h  plist.h  type.h  util.h  view.h
include/dim/mat/: storage_formats.h
include/dim/mat/storage_formats/: base.h  coo.h  csr.h  csr5.h
include/dim/mat/storage_formats/csr5/: calibrator.h
include/dim/memory/: aligned_allocator.h
include/dim/mpi/: comm.h  csr.h  csr5.h  mpi.h
include/dim/mpi/csr5/: edge_sync.h  output_range.h  result_sync.h
include/mmio/: mmio.h
libs/: CMakeLists.txt
libs/cuda_interop/: CMakeLists.txt  error.cpp  error.cu
libs/dim/: CMakeLists.txt
libs/dim/bench/: CMakeLists.txt
libs/dim/csr5_mpi/: CMakeLists.txt  csr5_mpi.cpp  edge_sync.cpp  output_range.cpp  result_sync.cpp
libs/dim/io/: CMakeLists.txt  file.cpp  h5.cpp  matrix_market.cpp
libs/dim/io/h5/: attribute.cpp  dataset.cpp  dataspace.cpp  file.cpp  group.cpp  location.cpp  object.cpp  plist.cpp  type.cpp
libs/dim/mat/: CMakeLists.txt
libs/dim/memory/: CMakeLists.txt
libs/dim/mpi/: CMakeLists.txt  csr.cpp  csr5.cpp  mpi.cpp
libs/dim/mpi/csr5/: edge_sync.cpp  output_range.cpp  result_sync.cpp
libs/dim/simple_main/: CMakeLists.txt
libs/io/: CMakeLists.txt  file.cpp  h5.cpp
libs/mat/: CMakeLists.txt  fake.cpp
libs/memory_ext/: CMakeLists.txt
libs/mmio/: CMakeLists.txt  mmio.c
libs/mpi_interop/: CMakeLists.txt  mpi.cpp
resources/: config.yaml  matrix-list.txt  modulefile.lua.in  version.h.in
resources/benchmark_data/cg_dim/gap-kron/2-1-64/: stats_01.json
resources/benchmark_data/io/gap-kron/: mpi_2.json  mpi_4.json  mpi_8.json  sp.json
resources/benchmark_data/io/gap-web/: mpi_2.json  mpi_4.json  mpi_8.json  sp.json
resources/benchmark_data/io/nlpkkt240/: mpi_2.json  mpi_4.json  mpi_8.json  sp.json
scripts/: benchmark_runner.py  create_app.sh  create_benchmark.sh  download_mm.bash  get_artifacts.py
scripts/data_analysis/: graphs.ipynb
scripts/metac/: update_artifacts.sh
scripts/rci/: cg_dim.bash  cg_dim_io.bash  cg_dim_sp.bash  cg_petsc.bash  run_mpi.bash  slurm_cmake
tests/: CMakeLists.txt  test_csr5.cpp  test_format.cpp  test_h5.cpp  test_io.cpp  test_mpi_output_ranges.cpp  test_simd.cpp  test_sorting.cpp
tests/test_files/: mm.mtx
(+230 files in other folders)
